--- a/compose.yaml
+++ b/compose.yaml
@@ -1,10 +1,9 @@
-version: '3'
 services:
-  yolov8_fastapi:
+  app:
     build: .
     restart: "always"
     volumes:
-    - ./:/app
+      - ./:/app
     working_dir: /app
     ports:
       - "8001:8001"
